test_output.txt
============================= test session starts =============================
platform win32 -- Python 3.12.11, pytest-8.4.0, pluggy-1.6.0 -- C:\Users\gompa\Documents\Fastapi_Static\.venv\Scripts\python.exe
cachedir: .pytest_cache
rootdir: C:\Users\gompa\Documents\Fastapi_Static
configfile: pyproject.toml
plugins: anyio-3.7.1, asyncio-1.0.0, mypy-1.0.1
asyncio: mode=Mode.STRICT, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 22 items / 2 errors

=================================== ERRORS ====================================
________ ERROR collecting tests/unit/domain/models/test_user_domain.py ________
.venv\Lib\site-packages\_pytest\python.py:497: in importtestmodule
    mod = import_path(
.venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
..\..\AppData\Roaming\uv\python\cpython-3.12.11-windows-x86_64-none\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests\unit\domain\models\test_user_domain.py:9: in <module>
    from app.domain.models.user import User
E     File "C:\Users\gompa\Documents\Fastapi_Static\app\domain\models\user.py", line 69
E       email_regex = r"^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$")
E                                                                        ^
E   SyntaxError: unmatched ')'
__________ ERROR collecting tests/unit/services/test_user_service.py __________
.venv\Lib\site-packages\_pytest\python.py:497: in importtestmodule
    mod = import_path(
.venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
..\..\AppData\Roaming\uv\python\cpython-3.12.11-windows-x86_64-none\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests\unit\services\test_user_service.py:9: in <module>
    from app.domain.models.user import User as UserDomain
E     File "C:\Users\gompa\Documents\Fastapi_Static\app\domain\models\user.py", line 69
E       email_regex = r"^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$")
E                                                                        ^
E   SyntaxError: unmatched ')'
=========================== short test summary info ===========================
ERROR tests/unit/domain/models/test_user_domain.py
ERROR tests/unit/services/test_user_service.py
!!!!!!!!!!!!!!!!!!! Interrupted: 2 errors during collection !!!!!!!!!!!!!!!!!!!
============================== 2 errors in 0.93s ==============================
